changed some quotation marks if that was the problem this whole time.........

--- a/templates/notes-quiz.html
+++ b/templates/notes-quiz.html
@@ -14,7 +14,7 @@
             <li>What note is this?</li>
             <img src="/static/img/{{i.prompt}}.png" width="210" height="150"> <br>
                 <!-- For future, try to figure out how to make the labels work here -->
-                <input type='radio' required="required" name='{{i.prompt}}' value='A' id='A-{{i.prompt}}'><label for="A-{{i.prompt}}">A</label>
+                <input type='radio' required="required" name='{{i.prompt}}' value='A' id="A-{{i.prompt}}"><label for="A-{{i.prompt}}">A</label>
                 <input type='radio' required="required" name='{{i.prompt}}' value='B' id="B-{{i.prompt}}"><label for="B-{{i.prompt}}">B</label>
                 <input type='radio' required="required" name='{{i.prompt}}' value='C' id="C-{{i.prompt}}"><label for="C-{{i.prompt}}">C</label>
                 <input type='radio' required="required" name='{{i.prompt}}' value='D' id="D-{{i.prompt}}"><label for="D-{{i.prompt}}">D</label>
